<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar">

    <TextView
        android:id="@+id/fromTextView"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:padding="20.0dip"
        android:text="@string/from"
        android:textAppearance="?android:textAppearanceMedium"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/from_input_layout"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/toTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="1dp"
        android:layout_weight="1.0"
        android:padding="20dp"
        android:text="@string/to"
        android:textAppearance="?android:textAppearanceMedium"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/toggleStations"
        app:layout_constraintTop_toBottomOf="@+id/from_input_layout"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"/>

    <ImageView
        android:id="@+id/toggleStations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10.0dip"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/toggle_stations_description"
        android:src="@drawable/ic_swap_vert_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/toTextView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toTextView"/>

    <Button
        android:id="@+id/goButton"
        android:layout_width="200dp"
        android:layout_height="61dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorPrimary"
        android:drawablePadding="5.0dip"
        android:gravity="center"
        android:padding="20.0dip"
        android:text="@string/go"
        android:textAppearance="?android:textAppearanceMediumInverse"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_input_layout"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/from_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="64dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <humazed.github.com.egyptiontrainline_u.custom_views.InstantAutoCompleteTextView
            android:id="@+id/startAutocomplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20.0dip"
            android:layout_marginRight="20.0dip"
            android:hint="@string/station_from_hint"
            android:imeOptions="actionNext"
            android:inputType="textCapWords|textNoSuggestions"
            android:padding="20.0dip"
            android:text="Cairo"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/to_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toTextView"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <humazed.github.com.egyptiontrainline_u.custom_views.InstantAutoCompleteTextView
            android:id="@+id/arrivalAutocomplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20.0dip"
            android:layout_marginRight="20.0dip"
            android:hint="@string/station_to_hint"
            android:imeOptions="actionDone"
            android:inputType="textCapWords|textNoSuggestions"
            android:padding="20.0dip"
            android:text="Alexandria"/>
    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>
